@@ -1,16 +1,19 @@
 package com.fooddelivery.backend.service;
 
+import com.fooddelivery.backend.dto.OrderItemResponse;
 import com.fooddelivery.backend.dto.OrderResponse;
+import com.fooddelivery.backend.enums.OrderStatus;
+import com.fooddelivery.backend.enums.PaymentStatus;
+import com.fooddelivery.backend.exception.ResourceNotFoundException;
 import com.fooddelivery.backend.model.Order;
-import com.fooddelivery.backend.model.OrderStatus;
 import com.fooddelivery.backend.repository.OrderRepository;
-
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -18,30 +21,77 @@ public class OrderService {
 
     private final OrderRepository orderRepository;
 
+    // ✅ GET ALL ORDERS (ADMIN)
     public Page<OrderResponse> getAllOrders(Pageable pageable) {
         return orderRepository.findAll(pageable)
                 .map(this::mapToResponse);
     }
 
+    // ✅ FILTER BY STATUS (ADMIN)
     public Page<OrderResponse> getOrdersByStatus(OrderStatus status, Pageable pageable) {
-        return orderRepository.findByStatus(status, pageable)
+        return orderRepository.findByOrderStatus(status, pageable)
                 .map(this::mapToResponse);
     }
 
+    // ✅ GET MY ORDERS (USER)
     public List<OrderResponse> getMyOrders(String email) {
         return orderRepository.findByUserEmail(email)
                 .stream()
                 .map(this::mapToResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // ✅ PROCESS PAYMENT
+    public OrderResponse processPayment(Long orderId) {
+
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Order", "id", orderId));
+
+        // 🔥 FIXED HERE
+        order.setPaymentStatus(PaymentStatus.SUCCESS);
+        order.setOrderStatus(OrderStatus.CONFIRMED);
+
+        orderRepository.save(order);
+
+        return mapToResponse(order);
+    }
+
+    // ✅ UPDATE ORDER STATUS (ADMIN)
+    public OrderResponse updateOrderStatus(Long orderId, OrderStatus status) {
+
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() ->
+                        new ResourceNotFoundException("Order", "id", orderId));
+
+        order.setOrderStatus(status);
+        orderRepository.save(order);
+
+        return mapToResponse(order);
+    }
+
+    // ✅ ENTITY → DTO
     private OrderResponse mapToResponse(Order order) {
+
+        List<OrderItemResponse> itemResponses = order.getItems()
+                .stream()
+                .map(item -> OrderItemResponse.builder()
+                        .id(item.getId())
+                        .itemName(item.getItemName())
+                        .quantity(item.getQuantity())
+                        .price(item.getPrice())
+                        .build())
+                .collect(Collectors.toList());
+
         return OrderResponse.builder()
                 .id(order.getId())
-                .total(order.getTotalAmount())  // FIXED
-                .status(order.getStatus())
+                .totalAmount(order.getTotalAmount())
+                .orderStatus(order.getOrderStatus())
+                .paymentStatus(order.getPaymentStatus())
                 .createdAt(order.getCreatedAt())
                 .userEmail(order.getUser().getEmail())
+                .restaurantName(order.getRestaurant().getName())
+                .items(itemResponses)
                 .build();
     }
 }
